--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
 
 .container{
     width: auto;
+    max-width: 500px;
     height: fit-content;
     padding: 10px;
     border-radius: 10px;
@@ -78,6 +79,7 @@ body{
 }
 
 .select-container select{
+    width: 300px;
     padding: 4px;
     border-radius: 8px;
     cursor: pointer;
